error notices for image not visible, alignment issue fix & phpcs

--- a/src/blocks/how-to/style.scss
+++ b/src/blocks/how-to/style.scss
@@ -11,9 +11,6 @@
 	}
 }
 
-.uagb-howto__wrap .uagb-howto__source-wrap .uagb-howto__source-image {
-    display: block;
-}
 .uagb-howto__cost-wrap {
     display: block;
     .uagb-howto-estcost-text,
